--- a/index.html
+++ b/index.html
@@ -14,63 +14,74 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
-      <div>
+      <div class="top">
         <img src="assets/img/logo.svg" alt="logoepi" id="logo" />
-        <div class="top">
-          <br />
+
+        <div class="blabla">
           <p>EPICODE-IL BLOG DEI DEVELOPERS</p>
-          <br />
-          <p>HOME</p>
-          <p>ARTICOLI</p>
-          <p>LAVORA CON NOI</p>
+          <div class="menutop">
+            <p>&#8658; HOME &#8656;</p>
+            <p>&#8658; ARTICOLI &#8656;</p>
+            <p>&#8658; LAVORA CON NOI &#8656;</p>
+          </div>
           <br />
         </div>
       </div>
     </header>
+    <br />
     <main>
-      <div>
-        <h1>Come creare un template per i post</h1>
-        <br />
-        <p>di Mario Rossi - pubblicato il 25 -10-2020</p>
-        <br />
-        <p>
-          La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti
-          comuni da applicare a tutte le pagine
-        </p>
-        <br />
-        <p>Le varie aree saranno quindi suddivise in:</p>
-        <br />
-        <ul>
-          <li>Contenuti di intestazione del tag &lt;header&gt</li>
-          <li>Contenuti centrali variabili del tag &lt;main&gt</li>
-          <li>Contenuti di fine pagina comuni, da inserire nel tag &lt;footer&gt</li>
-        </ul>
-        <br />
-        <p>
-          Formattazione del codice il testo dell'articolo dovrà essere formattato per identificare
-          tutte le parti da selezionare con i CSS.Perciò i passi saranno:
-        </p>
-        <br />
-        <ol>
-          <li>
-            Progettare su carta il markup finale, assegnando ad ogni specifico testo il tag
-            appropriato
-          </li>
-          <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
-          <li>Applicare gli stili CSS</li>
-        </ol>
-        <br />
-        <p>
-          L'applicazione di stili CSS è scresciuta negli anni fino a raggiungere la diffusione
-          pressochè totale.
-        </p>
-        <br />
-        <h3>Diffusione dei CSS</h3>
-      </div>
+      <h1>Come creare un template per i post</h1>
+      <br />
+      <h5>
+        <i class="fas fa-pen-square"></i> di Mario Rossi - <i class="fas fa-clock"></i> pubblicato
+        il 25 -10-2020
+      </h5>
+      <br />
+      <p>
+        La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti
+        comuni da applicare a tutte le pagine
+      </p>
+      <br />
+      <p>Le varie aree saranno quindi suddivise in:</p>
+      <br />
+      <ul>
+        <li>Contenuti di intestazione del tag &lt;header&gt</li>
+        <li>Contenuti centrali variabili del tag &lt;main&gt</li>
+        <li>Contenuti di fine pagina comuni, da inserire nel tag &lt;footer&gt</li>
+      </ul>
+      <br />
+      <p>
+        Formattazione del codice il testo dell'articolo dovrà essere formattato per identificare
+        tutte le parti da selezionare con i CSS.Perciò i passi saranno:
+      </p>
+      <br />
+      <ol>
+        <li>
+          Progettare su carta il markup finale, assegnando ad ogni specifico testo il tag
+          appropriato
+        </li>
+        <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
+        <li>Applicare gli stili CSS</li>
+      </ol>
+      <br />
+      <p>
+        L'applicazione di stili CSS è scresciuta negli anni fino a raggiungere la diffusione
+        pressochè totale.
+      </p>
+      <br />
+      <h3>Diffusione dei CSS</h3>
     </main>
     <article>
       <table>
@@ -114,18 +125,19 @@
       </p>
       <br />
       <iframe
-        width="400"
+        width="100%"
         height="300"
         src="https://www.youtube.com/embed/dvOvHXruEDM"
         title="YouTube video player"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
         style="border-radius: 30px"
-      ></iframe>
+      >
+      </iframe>
       <br />
       <aside>
         <br />
-        <h3>NOVITA</h3>
+        <h2>NOVITA</h2>
         <br />
         <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
         <br />
@@ -138,6 +150,15 @@
         />
         <button type="submit">Iscriviti!</button>
         <br />
+        <div>
+          <h3>ARTICOLI CORRELATI</h3>
+        </div>
+        <div>
+          <a href="">Validare il codice HTML</a>
+          <p><i class="fas fa-tag"></i> categoria:develop</p>
+        </div>
+        <div></div>
+        <div></div>
       </aside>
     </article>
   </body>
